--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -4,6 +4,7 @@
 <%= javascript_include_tag   "humanity_united/leaflet.markercluster-src" %>
 <%= stylesheet_link_tag "humanity_united/mapbox" %>
 <%= stylesheet_link_tag "humanity_united/ui-lightness/jquery-ui-1.10.4.custom.min" %>
+<%= stylesheet_link_tag "humanity_united/MarkerCluster.Default" %>
 <style>
     .container {width:100% !important;padding:0px !important;}
     #vis { width:100%; height:100%; margin-right:auto; margin-left:auto;}
@@ -566,7 +567,7 @@ function highlightProjectDiv(e){
 };
 drawClusters();
 //Map Event listeners
-comments = L.featureGroup();
+comments = L.markerClusterGroup();
 map.on('contextmenu',openRightClickMap)
 function openRightClickMap(e){
     var dropdownIcon = new L.DivIcon({html:"<div class='rightClick' id='zoom'>Zoom to this location</div><div class='rightClick' id='comment'>Add a comment to this location</div>",className:"rightclick-dropdown"});
